[project]
name = "05-activity"
version = "1.0.0"
description = "CS101 Activity 05: Algorithm Performance Analysis through Doubling Experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
activity05 = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]
